# workoutwiz

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Caddyfile  Caddyfile.local  ELEVATOR_PITCH.md  KG_FIRST_ROUTING_IMPLEMENTATION_PLAN.md  Makefile  PROJECT_STATUS.md  README.md  architecture.md  docker-compose.build.yml  docker-compose.yml  pyrightconfig.json
.claude/: settings.json
.docs/: knowledge-graph-schema.md  legacy.md
.docs/guides/1-multi-agent/: README.md  pyproject.toml
.docs/guides/1-multi-agent/src/workout_wiz/: hub.py  main.py  state.py
.docs/guides/1-multi-agent/src/workout_wiz/agents/: __init__.py  workout_generator.py
.docs/guides/1-multi-agent/tests/: test_audit.py  test_chat_endpoint.py  test_clarification.py  test_critical_path_generator.py  test_e2e_smoke.py
.scripts/: setup-runner.sh  setup-runner.sh.bak
.serena/: project.yml
1-multi-agent/: README.md
2-knowledge-graph/: KNOWLEDGE_GRAPH_ASSESSMENT.md  README.md
backend/: .env.example  Dockerfile.dev  Dockerfile.prod  PERFORMANCE.md  docker-entrypoint.sh  pyproject.toml
backend/app/: agents-kg.flowchart.md  auth.py  config.py  database.py  exception_handlers.py  logging_config.py  main.py
backend/app/agents/: GRAPH_STRUCTURE.md  audit_persist.py  coach.py  exercises.py  hub.py  state.py  workout_generator.py  workout_logger.py
backend/app/kg/: __init__.py  concept_resolver.py  context_assembler.py  driver.py  embeddings.py  explainability.py  feedback_service.py  generation_graph.py  retrieval_graph.py  tools.py
backend/app/knowledge_graph/: FEEDBACK_METHODOLOGY.md  SNOMED_METHODOLOGY.md  __init__.py  ingest_exercises.py  ingest_feedback.py  ingest_injuries.py  ingest_members.py  ingest_snomed.py  ingest_workout_history.py  init_schema.py  seed.py  seed_loader.py  traversal.py
backend/app/models/: __init__.py  audit_log.py  coach_draft.py  exercise.py  feedback.py  user.py  workout.py
backend/app/routers/: chat.py  coach.py  exercises.py  kg.py  workouts.py
backend/app/schemas/: chat.py  coach.py  errors.py  exercise.py  exercise_seed.py  kg.py  user.py  workout.py
backend/app/services/: accountability.py  exercises.py  workouts.py
backend/data/: snomed_subset.json
backend/demo/: index.html
backend/migrations/: env.py
backend/migrations/versions/: 077a1da3f52a_create_exercises_workouts_sequences_sets.py  3038bc135a2d_add_users_table_and_workouts_user_id_fk.py  721585857bab_add_gin_indexes_for_exercise_arrays.py  a1b2c3d4e5f6_add_audit_log_table.py  b2c3d4e5f6a7_add_enjoyment_note_to_workouts.py  c18404816173_initial.py  d1e2f3a4b5c6_add_coach_drafts_table.py  e4a51dde0a60_add_exercise_fields_and_feedback_table.py
backend/scripts/: build_snomed_subset.py  perf_baseline.py  seed_exercises.py
backend/tests/: conftest.py  test_accountability_integration.py  test_agents_audit.py  test_agents_chat.py  test_agents_clarification.py  test_agents_coach.py  test_agents_critical_generator.py  test_agents_critical_router.py  test_agents_e2e.py  test_agents_generator.py  test_agents_hub.py  test_agents_logger.py  test_agents_router.py  test_agents_routing.py  test_agents_state.py  test_audit_persist.py  test_auth.py  test_edge_cases.py  test_exercises.py  test_hitl_approval.py  test_kg_audit_integration.py  test_kg_critical_graph_retrieval.py  test_kg_critical_injury_filtering.py  test_kg_router.py  test_live_llm.py  test_routing_integration.py  test_seed_member_context.py  test_workouts.py
backend/tests/kg/: test_concept_resolver.py  test_context_assembler.py  test_embeddings.py  test_explainability.py  test_feedback_service.py  test_generation_graph.py  test_retrieval_graph.py  test_tools.py
backend/tests/knowledge_graph/: conftest.py  test_ingest_exercises.py  test_ingest_feedback.py  test_ingest_workout_history.py  test_traversal.py
backend/tests/services/: conftest.py  test_accountability.py
evals/: README.md  run_experiment.py  run_golden.py  run_replays.py  run_rubric.py  run_scenarios.py  stats.py
frontend/: Dockerfile.dev  Dockerfile.prod  docker-entrypoint.sh  eslint.config.js  (+11 more)
(+441 files in other folders)
