[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workoutwiz-backend"
version = "0.5.5"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    "rapidfuzz>=3.10",
    "neo4j>=5.0",
    "langchain-neo4j>=0.1",
    "langchain-community>=0.2",
    "langchain-openai>=0.2",
    "sentence-transformers>=2.7.0",
    "langchain-huggingface>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.7.0",
    "faker>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "scripts/"]

[[tool.mypy.overrides]]
module = [
    "fastapi_users.*",
    "asyncpg.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "langchain_anthropic.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["app.agents.*", "app.kg.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "langchain_neo4j.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langchain_huggingface.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "live: requires ANTHROPIC_API_KEY in root .env; skipped by default (run with -m live)",
]
